--- a/plum/package.json
+++ b/plum/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
     "react": "15.0.2",
-    "react-native": "^0.26.3"
+    "react-native": "^0.26.3",
+    "react-native-autocomplete": "^0.1.4"
   }
 }
