--- a/plum/package.json
+++ b/plum/package.json
@@ -12,6 +12,7 @@
     "react-native": "^0.26.3",
     "react-native-autocomplete": "^0.1.4",
     "react-native-floating-labels": "^1.0.0",
-    "react-native-image-picker": "^0.18.17"
+    "react-native-image-picker": "^0.18.17",
+    "react-native-tabbar": "^0.3.6"
   }
 }
