Add styling and update new groups

--- a/plum/package.json
+++ b/plum/package.json
@@ -13,6 +13,7 @@
     "react-native-autocomplete": "^0.1.4",
     "react-native-floating-labels": "^1.0.0",
     "react-native-image-picker": "^0.18.17",
-    "react-native-tabbar": "^0.3.6"
+    "react-native-tabbar": "^0.3.6",
+    "react-native-vector-icons": "^2.0.3"
   }
 }
