--- a/plum/package.json
+++ b/plum/package.json
@@ -11,6 +11,7 @@
     "react": "15.0.2",
     "react-native": "^0.26.3",
     "react-native-autocomplete": "^0.1.4",
+    "react-native-cookies": "^1.0.0",
     "react-native-floating-labels": "^1.0.0",
     "react-native-image-picker": "^0.18.17",
     "react-native-navbar": "^1.5.0",
