--- a/plum/package.json
+++ b/plum/package.json
@@ -6,12 +6,12 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "apphub": "^0.5.1",
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
     "react": "15.0.2",
     "react-native": "^0.26.3",
     "react-native-autocomplete": "^0.1.4",
-    "react-native-cookies": "^1.0.0",
     "react-native-floating-labels": "^1.0.0",
     "react-native-image-picker": "^0.18.17",
     "react-native-navbar": "^1.5.0",
